--- a/index.html
+++ b/index.html
@@ -231,14 +231,21 @@
                   <div class="container text-center" id ="footerDiv">
                     <div class="row align-items-center">
                       <div class="col">
-                        <img src="./images/folksam.png" id ="folksamPic" alt="">
+                        <img src="./images/folksam.png" id ="idealPic" alt="">
                       </div>
                       <div class="col">
                         <img src="./images/cert.png" id = "certPic" alt="">
                       </div>
                       <div class="col">
-                        <img src="./images/juvederm-swirl.png" id ="juvePic" alt="">
+                        <img src="./images/juvederm-swirl.png" id ="idealPic" alt="">
                       </div>
+                      <div class="col">
+                        <img src="./images/qliro.png" id ="idealPic" alt="">
+                      </div>
+                      <div class="col">
+                        <img src="./images/mecenat-logo-rgb-1600x268.png" id ="idealPic" alt="">
+                      </div>
+                      
                     </div>
                   </div>
   
