added september and reviewcarousel fix

--- a/index.html
+++ b/index.html
@@ -211,20 +211,19 @@
 
               <p id="monthlyAnchor"></p>
 
-                <div class="image-container">
-                  <div id="kampanjbildtext">
-                    <div id="kampanjbildtext1">
-                      <h2 id="kampanjrubrik1"></h2>
-                      <h4 id="kampanjrubrik2">🌟 FÅ 20% RABATT på Fillers & Tandblekning under hela augusti månad!</h4> 
-                      
-                      <h4 id="kampanjrubrik3"></h4>
-                      <p>Ingen rabattkod behövs, priset justeras på plats vid betalning. </p>
-                      <small>Obs! Gäller inte "paketpris"
-                      </small>
-                    </div>
-                    <img src="./images/kampanjbild.png" alt="Kampanj">
+              <div class="image-container">
+                <div id="kampanjbildtext">
+                  <div id="kampanjbildtext1">
+                    <h2 id="kampanjrubrik1"></h2>
+                    <h4 id="kampanjrubrik2"><strong>Ge din hud fuktboosten den längtar efter🌟</strong></h4>
+                    <h4 id="kampanjrubrik3">40%</h4>
+                    <h4 id="kampanjrubrik4">Rabatt på <strong>SKINBOOSTER</strong></h4>
+                    <small id="smallkampanjtext">Gäller hela september. OBS! Rabatten gäller inte paketpris</small>
                   </div>
+
+                  <img src="images/Model2NYBILDZ.png" alt="Kampanj">
                 </div>
+              </div>
 
                 <div class="container text-center" id="footerDiv">
                   <div class="row justify-content-center">
