--- a/omoss.html
+++ b/omoss.html
@@ -76,7 +76,7 @@
                     <span class="fa fa-star checked"></span>
                   </h5>
                   <p class="card-text">
-                    "Den mest professionellaste behandlare i hela Västerås. Elias är väldigt seriös, kunnig, trevlig mm."
+                    "Den mest professionellaste behandlare i hela Västerås. Elias är väldigt seriös, kunnig, trevlig mm. Elias ser alltid en helhet hos mig. Återkommer bara till honom i fortsättningen 🌺"
                   </p>
                 </div>
               </div>
