--- a/index.html
+++ b/index.html
@@ -104,16 +104,13 @@
         <div class="toast toast-bottom-center" id="toast-example" role="alert" aria-live="assertive" aria-atomic="true">
           <div class="toast-header">
             <!-- <img src="" class="rounded me-2" alt="..."> -->
-            <strong class="me-auto">Ett gyllene leende med Fillers fest!</strong>
+             <strong class="me-auto">Ett gyllene leende med Skinbooster september!</strong>
             <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
           </div>
           <div class="toast-body">
-            🌟 FÅ 20% RABATT på Fillers Behandlingar! 🌟<br>
-
-            🌟Få 20% rabatt på Tandblekning 🌟
-
-            <br><br> <small> Obs! Gäller inte "paketpris"
-            Erbjudandet gäller under hela augusti månad.
+            🌟 FÅ 40% RABATT på Skinbooster Behandlingar! 🌟<br>
+            <br> <small> Obs! Gäller inte "paketpris"
+            Erbjudandet gäller under hela september månad.
             Ingen rabattkod behövs, priset justeras på plats vid betalning. Vänligen, Ideal Clinic</small>
           </div>
         </div>
