--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           <p> Den nya lagen innebär att du måste genomgå en konsultation, antingen digitalt eller fysiskt, 
             innan du utför en injektionsbehandling. Du kan tidigast utföra en injektionsbehandling 2 dagar efter konsultationen. 
             Detta gäller för dig som är en ny patient eller inte har utfört injektionsbehandling på det område som önskas behandlas
-            inom de senaste 6 månaderna. Vi rekommenderar en konsultation på plats, Vi rekommenderar en konsultation på plats men det går även att få digitalt via telefon.</p>
+            inom de senaste 6 månaderna. Vi rekommenderar en konsultation på plats men det går även att få digitalt via telefon.</p>
             <p id="behandlingarAnchor">	</p>
 
       </div>
