Changed indexpage wobble

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
       <section id="linkBar">
         <div class="containera">
-          <div class="row">
+          <div class="">
             <div class="col" id="links">
               <a href="https://www.facebook.com/profile.php?id=100089815122494"><i class="bi bi-facebook"></i></a>
               <a href="https://www.instagram.com/idealclinic.se/"><i class="bi bi-instagram"></i></a>
