linkbar added omoss and kontakt

--- a/kontakt.html
+++ b/kontakt.html
@@ -56,6 +56,18 @@
       <div class="image-wrapper">
         <img src="./images/sunasfixar.jpg" alt="Description of image">
       </div>
+
+      <section id="linkBar">
+        <div class="containera">
+          <div class="">
+            <div class="col" id="links">
+              <a href="https://www.facebook.com/profile.php?id=100089815122494"><i class="bi bi-facebook"></i></a>
+              <a href="https://www.instagram.com/idealclinic.se/"><i class="bi bi-instagram"></i></a>
+              <i class="bi bi-telephone-fill">010-333 3553</i>
+            </div>
+          </div>
+        </div>
+      </section>
   
 
 
