--- a/omoss.html
+++ b/omoss.html
@@ -60,6 +60,18 @@
         <div class="product-device product-device-2 box-shadow d-none d-md-block"></div>
       </div>
 
+      <section id="linkBar">
+        <div class="containera">
+          <div class="">
+            <div class="col" id="links">
+              <a href="https://www.facebook.com/profile.php?id=100089815122494"><i class="bi bi-facebook"></i></a>
+              <a href="https://www.instagram.com/idealclinic.se/"><i class="bi bi-instagram"></i></a>
+              <i class="bi bi-telephone-fill">010-333 3553</i>
+            </div>
+          </div>
+        </div>
+      </section>
+
 
       <div class="reviewBox">
         <div id="reviewCarousel" class="carousel slide" data-bs-ride="carousel">
