--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                     <small id="smallkampanjtext">Gäller hela september. OBS! Rabatten gäller inte paketpris</small>
                   </div> -->
 
-                  <img src="images/Laserkampanj.jpg" alt="Kampanj">
+                  <img src="images/NovemberfillersFixed.png" alt="Kampanj">
                 </div>
               </div>
 
