--- a/index.html
+++ b/index.html
@@ -104,19 +104,22 @@
 
       <div class="toast-container position-fixed bottom-0 end-0 p-3">
         <div class="toast toast-bottom-center" id="toast-example" role="alert" aria-live="assertive" aria-atomic="true">
-          <div class="toast-header">
-            <!-- <img src="" class="rounded me-2" alt="..."> -->
-             <strong class="me-auto">Höstspecial! 🍂</strong>
-            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-          </div>
-          <div class="toast-body">
-            Nu har du chansen att bli hårfri till sommaren! <br><br> 🍂Starta din laserbehandling hos oss i oktober och spara <strong>20%</strong>  på behandlingskostnaden🍂<br>
-            <br>   
-            <small> 
-              Ingen rabattkod behövs, priset justeras på plats vid betalning.  Vänligen, Ideal Clinic</small>
-          </div>
+            <div class="toast-header">
+                <!-- <img src="" class="rounded me-2" alt="..."> -->
+                <strong class="me-auto">Novemberkampanj!👄</strong>
+                <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+            </div>
+            <div class="toast-body">
+                <!-- Wrap the text in an anchor tag -->
+                <p>Missa inte månadens kampanj!</p>
+                <a href="#monthlyAnchor" id="clickherelink"  style="color: inherit; text-decoration: none;">Klicka här!</a>
+                <br>   
+                <!-- <small>  -->
+                  <!-- Ingen rabattkod behövs, priset justeras på plats vid betalning.  Vänligen, Ideal Clinic</small> -->
+            </div>
         </div>
-      </div>
+    </div>
+    
 
       <p id="nyalagenAnchor"></p>
 
