December with ChristmasEffect

--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
 
       <div class="intro">
         <p class="logo-header">
-            <span class="logo">Ideal</span>
-            <span class="logo">Clinic</span>
+            <span class="logo">🎄Ideal</span>
+            <span class="logo">Clinic🎄</span>
         </p>
+        <div class="snowfall"></div>
       </div>
 
       <header>
@@ -56,7 +57,7 @@
           <button class ="introBtn"><a href="#monthlyAnchor" style="color: black; text-decoration: none;">Månadens Kampanj</a> </button>
           <button class ="introBtn"><a href="#nyalagenAnchor" style="color: black; text-decoration: none;">Nya skönhetslagen</a> </button>
           <button class ="introBtn"><a href="#behandlingarAnchor" style="color: black; text-decoration: none;">Våra behandlingar</a> </button>
-          
+
         </div>
 
 
@@ -106,7 +107,7 @@
         <div class="toast toast-bottom-center" id="toast-example" role="alert" aria-live="assertive" aria-atomic="true">
             <div class="toast-header">
                 <!-- <img src="" class="rounded me-2" alt="..."> -->
-                <strong class="me-auto">Novemberkampanj!👄</strong>
+                <strong class="me-auto">🎄Decemberkampanj!🎄</strong>
                 <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
             </div>
             <div class="toast-body">
@@ -223,7 +224,7 @@
                     <small id="smallkampanjtext">Gäller hela september. OBS! Rabatten gäller inte paketpris</small>
                   </div> -->
 
-                  <img src="images/NovemberfillersFixed.png" alt="Kampanj">
+                  <img src="images/kemiskpeelingkampanjFix.jpg" alt="Kampanj">
                 </div>
               </div>
 
