Fixed snow intro to phone

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 
       <div class="intro">
         <p class="logo-header">
-            <span class="logo">🎄Ideal</span>
-            <span class="logo">Clinic🎄</span>
+            <span class="logo">Ideal Clinic</span>
+            <span class="logo">🎄🎁</span>
         </p>
         <div class="snowfall"></div>
       </div>
