--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="intro">
         <p class="logo-header">
             <span class="logo">Ideal Clinic</span>
-            <span class="logo">🎄🎁</span>
+            <span class="logo"></span>
         </p>
         <div class="snowfall"></div>
       </div>
@@ -107,7 +107,7 @@
         <div class="toast toast-bottom-center" id="toast-example" role="alert" aria-live="assertive" aria-atomic="true">
             <div class="toast-header">
                 <!-- <img src="" class="rounded me-2" alt="..."> -->
-                <strong class="me-auto">🎄Decemberkampanj!🎄</strong>
+                <strong class="me-auto">🎉 Januarikampanj God fortsättning!!🥳</strong>
                 <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
             </div>
             <div class="toast-body">
@@ -224,7 +224,7 @@
                     <small id="smallkampanjtext">Gäller hela september. OBS! Rabatten gäller inte paketpris</small>
                   </div> -->
 
-                  <img src="images/kemiskpeelingkampanjFix.jpg" alt="Kampanj">
+                  <img src="images/januarikampanj.jpg" alt="Kampanj">
                 </div>
               </div>
 
