--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <div class="toast toast-bottom-center" id="toast-example" role="alert" aria-live="assertive" aria-atomic="true">
             <div class="toast-header">
                 <!-- <img src="" class="rounded me-2" alt="..."> -->
-                <strong class="me-auto">🎉 Januarikampanj God fortsättning!!🥳</strong>
+                <strong class="me-auto">Februarikampanj! ❄️</strong>
                 <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
             </div>
             <div class="toast-body">
@@ -224,7 +224,7 @@
                     <small id="smallkampanjtext">Gäller hela september. OBS! Rabatten gäller inte paketpris</small>
                   </div> -->
 
-                  <img src="images/januarikampanj.jpg" alt="Kampanj">
+                  <img src="images/helkroppGym.jpg" alt="Kampanj">
                 </div>
               </div>
 
