--- a/index.html
+++ b/index.html
@@ -15,16 +15,6 @@
     <script src="./js/app.js" defer></script>
     <script src="./js/behandlingar.js" defer></script>
 
-
-    <!-- <link  rel="icon" type="image/png" sizes="16x16" href="/Users/adisbacic/Ideal Clinic/IDEAL-CLINIC/images/icons8.svg" /> -->
-
-    <!-- Bootstrap CSS -->
-<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.3/css/bootstrap.min.css" integrity="sha512-HZuXMlz/2k7CJ/6G9V7NlY6UjhKzlUuJ6GrdeVSKuLKglZK2QZuG1I9CB7VvSp6/mk+x6yIwDwzU6bRzKjSfrA==" crossorigin="anonymous" /> -->
-
-<!-- Bootstrap JavaScript -->
-<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.3/js/bootstrap.bundle.min.js" integrity="sha512-kmCEv+RdrnW8HpLUMjw28SwMkZENp90piASBcNlBz9XhjvDrcnz2yzawTmFTdGjimL80h+n3ndqgJrDtpxStlw==" crossorigin="anonymous"></script> -->
-
-
   </head>
 
   <body>
@@ -107,7 +97,7 @@
         <div class="toast toast-bottom-center" id="toast-example" role="alert" aria-live="assertive" aria-atomic="true">
             <div class="toast-header">
                 <!-- <img src="" class="rounded me-2" alt="..."> -->
-                <strong class="me-auto">Februarikampanj! ❄️</strong>
+                <strong class="me-auto">Marskampanj!</strong>
                 <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
             </div>
             <div class="toast-body">
@@ -224,7 +214,7 @@
                     <small id="smallkampanjtext">Gäller hela september. OBS! Rabatten gäller inte paketpris</small>
                   </div> -->
 
-                  <img src="images/helkroppGym.jpg" alt="Kampanj">
+                  <img src="images/Marskampanj.jpg" alt="Kampanj">
                 </div>
               </div>
 
